added transaction filtering
